# video2pptx

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  config.example.yaml  grace-atlas.toml  opencode.json  project.json  pyproject.toml  session-ses_0b9f.md  session-ses_0bf4.md
.github/workflows/: ci.yml  mcp-e2e.yml  release-windows.yml
.opencode/commands/: project-status.md
.opencode/scripts/: add_decorators.py  check_slides.py  decompile_pyc.py  disasm_log_bridge.txt  disasm_project_model.txt  disasm_timeline_model.txt  mcp_check.py  mcp_edit_slide2.py  mcp_export.py  mcp_list.py  mcp_logs.py  mcp_notes_export.py  mcp_open.py  mcp_seek.py  mcp_seek2.py  mcp_seek30.py
.openpackage/: openpackage.yml
acceptance/evidence/phase21-runtime-acceptance/: acceptance-fixture.json  slides.json  summary.md
acceptance/evidence/phase21-runtime-baseline/: baseline-metrics.json  detect-log.txt  effective-config.txt  environment.txt  timeline-errors.txt
audits/phase17-phase18-history/: accepted-change-loss-register.md  commit-dag.md  commit-inventory.csv  duplicate-implementations.md  file-ownership-matrix.csv  final-audit-report.md  grace-code-consistency.md  overlap-files.txt  phase-classification.csv  provenance-matrix.md  test-gap-register.md
benchmarks/detect/evidence/: aggregate_evidence.json  bottleneck_decision.json  bottleneck_decision.md
benchmarks/detect/reference/: pre-twopass-3472e62.json
benchmarks/detect/reports/: phase18-summary.md
colab/: video2pptx_colab.ipynb  video_slide_md_colab.ipynb
docs/: architecture.md  audit-report.md  development-plan.xml  e2e-characterization-audit.md  findings.md  knowledge-graph.xml  operational-packets.xml  product-roadmap.md  requirements.xml  specification.md  technology.xml  verification-plan.xml
docs/adr/: ADR-001-project-persistence-source-of-truth.md  ADR-002-windows-packaging-tool.md
docs/grace-graphs/: README.md
docs/grace-graphs/dot/: cross-links.dot  modules-deps-core.dot  modules-deps.dot  modules-verification.dot  overview.dot  phases-steps.dot  use-cases-flows.dot
docs/grace-graphs/mermaid/: cross-links.md  cross-links.mmd  modules-deps-core.md  modules-deps-core.mmd  modules-deps.md  modules-deps.mmd  modules-verification.md  modules-verification.mmd  overview.md  overview.mmd  phases-steps.md  phases-steps.mmd  use-cases-flows.md  use-cases-flows.mmd
docs/grace-reports/phase21-runtime-correction/: summary.md
docs/grace-reports/stage2-verification-20260718/: baseline-lint.txt  (+75 more)
docs/plans/: phase19-analysis-resolution-golden-mean.md  phase20-analysis-quality-presets.md  phase21-clean-windows-user-journey.md
in/: 02_1. Введение.srt
out2/: deck.md  slides.json
out4/: deck.md  deck.pptx  slides.json
out5/: deck.pptx
out6/: slides.json
out7/: slides.json
out8/: project.json
packaging/windows/: build.ps1  inventory.md  smoke-test.ps1
scripts/: README.md  check_branding_sync.py
src/video2pptx/: __init__.py  analysis_quality.py  analysis_scale.py  app_service.py  auto_align.py  build_meta.py  cli.py  command_router.py  config.py  debug_export.py  dedupe.py  desktop.py  detect_slides.py  detection_counts.py  detection_metrics.py  frame_features.py  llm_client.py  llm_orchestrator.py  markdown_export.py  models.py  notes_pipeline.py  notes_processor.py  paths.py  pptx_export.py  project_manager.py  project_model.py  roi.py  roi_tool.py  segmenter.py  slide_analyzer.py  slide_detector.py  streaming_representatives.py  subtitles.py  timeline_model.py  video_decode.py
src/video_slide_md/: __init__.py  cli.py  config.py  debug_export.py  dedupe.py  detect_slides.py  frame_features.py  llm_client.py  llm_orchestrator.py  markdown_export.py  models.py  notes_pipeline.py  notes_processor.py  pptx_export.py  project_manager.py  roi.py  roi_tool.py  segmenter.py  slide_analyzer.py  slide_detector.py  subtitles.py  video_decode.py
tests/: conftest.py  test_analysis_quality.py  test_analysis_scale.py  test_app_service_runner.py  test_architecture.py  test_atomic_json.py  test_auto_align.py  test_backends.py  test_benchmark_detect.py  test_benchmark_provenance.py  test_bootstrap.py  test_branding.py  test_characterization_adapters.py  test_characterization_fixtures.py  test_cli.py  test_cli_adapter_commands.py  test_cli_adapter_core.py  test_cli_analysis_max_side.py  test_cli_architecture.py  test_cli_characterization.py  test_cli_e2e.py  test_command_router.py  test_config.py  test_confirm_policy.py  test_debug_action.py  test_debug_export.py  test_dedupe.py  test_detect_progress.py  test_detect_slides.py  test_detection_counts.py  test_detection_metrics.py  test_duration_semantics.py  test_frame_features.py  test_github_release_provider.py  test_golden_mean_sweep.py  test_gui_app_config.py  test_gui_debug_dock.py  test_gui_log_bridge.py  test_gui_main.py  test_gui_main_window.py  (+47 more)
tests/application/: __init__.py  test_alignment_service.py  test_auto_service.py  test_common.py  test_detection_service.py  test_export_service.py  test_notes_service.py  test_preview_service.py  test_validation_service.py
tests/domain/: __init__.py  test_pipeline_state.py  test_project.py  test_value_objects.py
tests/e2e/: test_mcp_gui_workflow.py  test_mcp_startup_characterization.py
tests/fixtures/: gen_test_video.py  test_slides.srt
tests/gui/: test_main_window_integration.py  test_pipeline_controller.py  test_pipeline_started.py  test_project_controller.py  test_status_manager.py  test_timeline_controller.py  test_timeline_interactions.py
tests/infra/: __init__.py  test_file_repository.py  test_mapper.py  test_migrations.py  test_persistence_dto.py
tests/tools/: test_benchmark_detect.py
tools/: README.md  __init__.py  aggregate_detect_benchmark.py  benchmark_detect.py  discrimination_helpers.py  e2e_snapshot.py  grace_atlas.py  grace_graphs.py  mcp_e2e_runner.py  probe_pass2_retrieval.py  probe_pyav_decode_config.py  probe_pyav_hwaccel.py  probe_target_optimization_discrimination_r2.py  run_mcp_e2e.ps1  sweep_analysis_resolution.py
(+286 files in other folders)
