[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "video2pptx"
dynamic = ["version"]
description = "Extract slide intervals from educational videos, link to SRT/VTT subtitles, and export Markdown/PPTX presentations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kucheryavenkovn" }]
keywords = ["video", "slides", "presentation", "markdown", "marp", "subtitle", "detection", "open-cv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "rich>=13.7",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "Pillow>=10.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pysubs2>=1.7",
    "imagehash>=4.3",
    "scikit-image>=0.21",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
    "PySide6-Addons>=6.6",
]
pptx = [
    "python-pptx>=0.6",
]
llm = [
    "httpx>=0.27",
]
gpu = [
    "av>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.3",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx>=0.27",
    "python-pptx>=0.6",
]
all = [
    "PySide6>=6.6",
    "PySide6-Addons>=6.6",
    "python-pptx>=0.6",
    "httpx>=0.27",
]

[project.scripts]
video2pptx = "video2pptx.adapters.cli.app:run"
video2pptx-gui = "video2pptx.desktop:main"
video2pptx-desktop = "video2pptx.desktop:main"

[project.urls]
Homepage = "https://github.com/kucheryavenkovn/video2pptx"
Documentation = "https://github.com/kucheryavenkovn/video2pptx#readme"
Repository = "https://github.com/kucheryavenkovn/video2pptx"
Issues = "https://github.com/kucheryavenkovn/video2pptx/issues"

[tool.hatch.version]
path = "src/video2pptx/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/video2pptx"]

[tool.hatch.build.targets.sdist]
include = ["src/video2pptx", "examples", "docs", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
markers = [
    "integration: tests that require real video files or network access",
    "gpu: tests that require CUDA/GPU hardware",
    "llm: tests that require a running LM Studio instance",
    "gui: tests that require a display or offscreen Qt platform",
    "slow: tests that take more than 10 seconds",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"src/video2pptx/gui/timeline_v2.py" = ["B905"]
"src/video2pptx/gui/timeline3/view.py" = ["B905"]
"src/video2pptx/gui/smart_snap.py" = ["B905"]
"src/video2pptx/project_model.py" = ["B905"]
"src/video2pptx/timeline_model.py" = ["B024", "E741"]
"src/video2pptx/debug_export.py" = ["B028", "B905"]
"src/video2pptx/config.py" = ["B028"]
"src/video2pptx/cli.py" = ["B904"]
"src/video2pptx/frame_features.py" = ["B905"]
"tests/*" = ["B017", "B007", "F841"]
"tests/fixtures/*" = ["B007"]

[tool.ruff.lint.isort]
known-first-party = ["video2pptx"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
